# usv_sim_lsa

./: ..gitignore.swp  .README.md.swp  .gitignore  .gitmodules  .project  .rosinstall  .travis.yml  README.md  Untitled Document 1  airboat_run  airboat_scenario  airboat_scenario1  airboat_scenario4  airboat_scenario_j1  autorun10x  compile_stack  computeBag.py  createEclipseProject  createProject  diagrama.asta  diagrama_LOCAL_29018.asta  diff_run  diffboat_scenario1  diffboat_scenario2  diffboat_scenario_j1  differential_run  frames.gv  install  install_usv_sim  moderateWaterFlow  parar  prepara  prepara2  prepara3  prepara4  recompileStack  rudder_run  rudder_run1  rudderboat_scenario1  rudderboat_scenario4  (+22 more)
freefloating_gazebo_resources/freefloating_gazebo/: .travis.yml  LICENSE  README.md  package.xml
src/freefloating_gazebo/: .cproject  .project  CMakeLists.txt  README.md  package.xml  teste
src/freefloating_gazebo_demo/: CMakeLists.txt  package.xml
src/keel_plugin/: CMakeLists.txt  package.xml
src/liftdragww/: .project  CMakeLists.txt  package.xml
src/sail_plugin/: .project  CMakeLists.txt  package.xml
src/usv_base_ctrl/: .project  CMakeLists.txt  package.xml
src/usv_navigation/: .project  CMakeLists.txt  package.xml
src/usv_sim/: .project  CMakeLists.txt  README.md  package.xml
src/usv_sim_rviz/: .project  CMakeLists.txt  package.xml
src/usv_tf/: .project  CMakeLists.txt  package.xml
src/uwsim_osgbullet/: osgBulletConfig.cmake.in  osgBulletConfigVersion.cmake.in  package.xml
src/uwsim_osgocean/: .project  CMakeLists.txt  package.xml
src/uwsim_osgworks/: UseosgWorks.cmake.in  osgWorksConfigVersion.cmake.in  package.xml
usv_base_ctrl/: .cproject  .project  CMakeLists.txt
usv_base_ctrl/scripts/: airboat_control_heading.py  airboat_control_spiral.py  boat_diff_vel_ctrl.py  diff_control_heading.py  laser_tf_broadcaster.py  rudder_control_heading.py  sailboat_control_heading.py  teleop_twist_keyboard.py
usv_dynamics/foil_dynamics_plugin/: CMakeLists.txt  package.xml
usv_metrics/: .cproject  .project  CMakeLists.txt  package.xml
usv_navigation/: .cproject  .project  CMakeLists.txt
usv_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
usv_navigation/launch/: amcl.launch  amcl2.launch  amcl3.launch  move_base.launch  move_base3.launch  multi_move_base.launch  multiple_navigation.launch
usv_navigation/maps/: diluvio2.pgm  diluvio2.yaml  diluvio2b.pgm  diluvio2bridge2.tif  diluvio2c.pgm  diluvio4.pgm  diluvio4.yaml  diluvio5.pgm  diluvio5.yaml  mapping1.pgm  mapping1.yaml  mapping2.pgm  my_map2.yaml  my_map3.yaml
usv_navigation/param/: costmap_common_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
usv_navigation/scripts/: patrol_pid.py  patrol_pid_headon1.py  patrol_pid_movebase3.py  patrol_pid_scene1.py  patrol_pid_scene2.py  patrol_pid_scene2gtA.py  patrol_pid_scene2gtB.py  patrol_pid_scene5.py  patrol_pid_scene_j1.py  patrol_pid_scene_j2.py  patrol_pid_scene_j3.py  patrol_pid_scene_j3s.py  patrol_pid_scene_jFcentro.py  patrol_pid_scene_jFmargem.py  patrol_pid_scene_jG.py  patrol_pid_scene_validation.py  sail_polar_diagram.py  tacking.py  tacking2.py  tacking_tst.py
usv_navigation/tf_trees/: frames.gv
usv_navigation/usv_nav_metrics/: package.xml
usv_scenarios/: CMakeLists.txt  package.xml
usv_scenarios/launch/: airboat_scenario1.launch  airboat_scenario3.launch  airboat_scenario_mult.launch  diffboat_scenario1.launch  diffboat_scenario3.launch  rudderboat_flooding1.launch  rudderboat_scenario6.launch  sailboat_empty_scenario.launch  sailboat_scenario3.launch  sailboat_scenario4.launch
usv_scenarios/meshes/: buoy.mtl  buoy.osg  buoy2.dae  buoy2.osg
usv_scenarios/scenes/: UWSimScene.dtd  airboat_scenario1.xml  airboat_scenario2.xml  airboat_scenario4.xml  airboat_scenario_mult.xml  diffboat_scenario2.xml  diffboat_scenario3.xml  diffboat_scenario5.xml  rudderboat_scenario3.xml  rudderboat_scenario4.xml  sailboat_scenario2.xml  sailboat_scenario3.xml  sailboat_scenario4.xml
usv_scenarios/scripts/: airboat_scenario1  rudderboat_scenario6  sailboat_scenario2
usv_sim/: .cproject  .project  CMakeLists.txt  package.xml
usv_sim/config/: hullParams.yaml  rudderboat.yaml  sailboat.yaml
usv_sim/launch/: airboat_scenario1.launch  diffboat_scenario2.launch  robots_start.launch  rudderboat_scenario2.launch  rudderboat_scenario3.launch  runscenario.launch  scenario1.launch
usv_sim/meshes/: buoy.dae  buoy2.mtl  column.stl  simpleHull.dae  simpleHull.stl  wall.stl  wall20.stl
usv_sim/scenarios/: airboat_scenario1  airboat_scenario3  diffboat_scenario3  diffboat_scenario5  rudderboat_scenario2  rudderboat_scenario3  rudderboat_scenario5  sailboat_scenario0  sailboat_scenario1  sailboat_scenario3
usv_sim/scenes/: .scenario1_boat_rudder.xml.swp  UWSimScene.dtd  airboatHull_scenario1.xml  airboat_scenario0.xml  airboat_scenario1.xml  airboat_scenario2.xml  airboat_scenario_j1.xml  airboat_scenario_j2.xml  airboat_scenario_j2gt.xml  airboat_scenario_j3.xml  airboat_segmentation_2.xml  airboat_segmentation_2gt.xml  airboat_segmentation_3.xml  airboat_segmentation_3gt.xml  airboat_validation1.xml  airboat_validation2.xml  diffboat_scenario1.xml  diffboat_scenario2.xml  diffboat_scenario3.xml  diffboat_scenario5.xml  diffboat_scenario_j1.xml  diffboat_scenario_j2.xml  diffboat_scenario_j3.xml  diffboat_scenario_jF.xml  diffboat_scenario_jG.xml  diffboat_validation1.xml  movebase_mapping1.xml  movebase_navigation3.xml  robots_start.xml  rudderboat_scenario1.xml  rudderboat_scenario2.xml  rudderboat_scenario3.xml  rudderboat_scenario5.xml  rudderboat_scenario_j1.xml  rudderboat_scenario_j2.xml  rudderboat_scenario_j3.xml  sailboat_scenario0.xml  sailboat_scenario1.xml  sailboat_scenario2.xml  sailboat_scenario3.xml  (+3 more)
usv_sim/urdf/: airboat_dummy.urdf  diffboat_dummy.urdf  rudderboat_dummy.urdf  sailboat_dummy.urdf
usv_sim/world/: empty.world  (+1 more)
usv_sim_rviz/: .cproject  .project  package.xml
usv_tf/: .cproject  .project  CMakeLists.txt
(+9003 files in other folders)
