<?xml version="1.0"?>
<package>
  <name>usv_metrics</name>
  <version>0.0.0</version>
  <description>This package contains the necessary configs to interface with the navigation stack. It also contain navigation code for the usvs.</description>

  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <maintainer email="marcelo.paravisi@osorio.ifrs.edu.br">Marcelo Paravisi</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <author>LSA</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
