<?xml version="1.0"?>
<package>
  <name>usv_sim</name>
  <version>0.0.0</version>
  <description>This package contains the robot and enviromental models for the simulation.</description>

  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <maintainer email="marcelo.paravisi@osorio.ifrs.edu.br">Marcelo Paravisi</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <author>LSA</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base</run_depend>

</package>
