<?xml version="1.0"?>
<package>
  <name>usv_sim_rviz</name>
  <version>0.0.0</version>
  <description>This package contains the rviz launch and config for navigation (amcl) and mapping.</description>

  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <maintainer email="marcelo.paravisi@osorio.ifrs.edu.br">Marcelo Paravisi</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <author>lsa</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
