<?xml version="1.0"?>
<package>
  <name>keel_plugin</name>
  <version>0.0.0</version>
  <description>The keel_plugin package</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
