<?xml version="1.0"?>
<package>
  <name>liftdragww</name>
  <version>0.0.0</version>
  <description>The liftdragww package</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
