<?xml version="1.0"?>
<package>
  <name>sail_plugin</name>
  <version>0.0.0</version>
  <description>This plugin calculate the lift and drag forces acting on the Sail.</description>

  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <maintainer email="marcelo.paravisi@osorio.ifrs.edu.br">Marcelo Paravisi</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
