<?xml version="1.0"?>
<package>
  <name>usv_base_ctrl</name>
  <version>0.0.0</version>
  <description>The usv_base_ctrl package</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/usv_base_ctrl</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
</package>
