<?xml version="1.0"?>
<package>
  <name>usv_base_ctrl</name>
  <version>0.0.0</version>
  <description>Contains the velocity control of multiple robots.</description>

  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <maintainer email="marcelo.paravisi@osorio.ifrs.edu.br">Marcelo Paravisi</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url> 

  <buildtool_depend>catkin</buildtool_depend>
</package>
