<?xml version="1.0"?>
<package format="2">
  <name>usv_navigation</name>
  <version>1.1.0</version>
  <description>This package contains the necessary configs to interface with the navigation stack. It also contain navigation code for the usvs.</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url>

  <author>lsa</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base</depend>
  
</package>
