<?xml version="1.0"?>
<package format="2">
  <name>usv_sim</name>
  <version>1.1.0</version>
  <description>This package contains all the model information for the simulation.</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/disaster-robotics-proalertas/usv_sim_lsa</url>

  <author>LSA</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base</depend>
  
  <build_depend>freefloating_gazebo</build_depend>

</package>
