<?xml version="1.0"?>
<package>
  <name>usv_sim_rviz</name>
  <version>0.0.0</version>
  <description>This package contains the rviz launch and config for navigation (amcl) and mapping.</description>

  <maintainer email="lsa@todo.todo">lsa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
