<?xml version="1.0"?>
<package>
  <name>uwsim_osgocean</name>
  <version>1.0.3</version>
  <description>The OSG Ocean library adapted to UWSim. See https://code.google.com/p/osgocean</description>

  <maintainer email="marioprats@gmail.com">Mario Prats</maintainer>
  <maintainer email="perezsolerj@gmail.com">Javier Perez</maintainer>
  <license>LGPL</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopenscenegraph</build_depend>
  <build_depend>libfftw3</build_depend>
  <build_depend>opengl</build_depend>
  
  <run_depend>catkin</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libopenscenegraph</run_depend>
  <run_depend>libfftw3</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>opengl</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
